[package]
name = "meta_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11.1"
bytes = "1.1.0"
env_logger = "0.9.0"
futures = "0.3.21"
mongodb = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
warp = "0.3.2"

