[package]
name = "meta_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.12.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
mongodb = "2.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.16.1", features = ["full"] }
warp = "0.3.2"