[package]
name = "meta_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
mongodb = "2.8.1"
reqwest = { version = "0.11.24", features = ["json"] }
scopeguard = "1.2.0"
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"